<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bedirhan.sayitahminoyunu.MainActivity"
    android:background="#FAFAD2">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        android:orientation="vertical">
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:visibility="visible"
        android:id="@+id/btn_basla"
        android:text="@string/btn_basla"
        android:onClick="oyuna_basla_click"
        android:background="#66FF00"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tw_oyun_bitti"
            android:visibility="invisible"
            android:text="@string/oyun_bitti"
            android:textSize="25dp"
            android:textColor="#CC0000"
            android:layout_marginLeft="10dp"/>
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="gravity"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="7dp"
        android:gravity="center"
        android:id="@+id/liner_layout"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tw_tahminsonucu"
            android:text="@string/tahmin_ilk"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tw_sure"
            android:textSize="30dp"
            android:layout_marginTop="50dp"
            android:textColor="#0099CC"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/et_tahmin"
            android:layout_marginTop="50dp"
            android:enabled="false"
            android:textColor="#CC6633"
            android:textSize="20dp"
            />


        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal"
            android:rowCount="4"
            android:visibility="visible"
            android:layout_gravity="center"
            android:layout_marginLeft="35dp">

            <Button
                android:id="@+id/btn_bir"
                android:text="@string/btn_bir"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:onClick="bir_click"/>

            <Button
                android:id="@+id/btn_iki"
                android:text="@string/btn_iki"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:onClick="iki_click"/>

            <Button
                android:id="@+id/btn_uc"
                android:text="@string/btn_uc"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:onClick="uc_click"/>

            <Button
                android:id="@+id/btn_dort"
                android:text="@string/btn_dort"
                android:onClick="dort_click"/>

            <Button
                android:id="@+id/btn_bes"
                android:text="@string/btn_bes"
                android:onClick="bes_click"/>

            <Button
                android:id="@+id/btn_alti"
                android:text="@string/btn_alti"
                android:onClick="alti_click"/>

            <Button
                android:id="@+id/btn_yedi"
                android:text="@string/btn_yedi"
                android:onClick="yedi_click"/>

            <Button
                android:id="@+id/btn_sekiz"
                android:text="@string/btn_sekiz"
                android:onClick="sekiz_click"/>

            <Button
                android:id="@+id/btn_dokuz"
                android:text="@string/btn_dokuz"
                android:onClick="dokuz_click"/>

            <Button
                android:id="@+id/btn_sifir"
                android:text="@string/btn_sifir"
                android:onClick="sifir_click"/>

            <Button
                android:id="@+id/btn_sil"
                android:text="@string/btn_sil"
                android:onClick="sil_click"/>
            <Button
                android:id="@+id/btn_gonder"
                android:text="@string/btn_gonder"
                android:onClick="gonder_click"/>

        </GridLayout>


    </LinearLayout>
        <TextView
            android:id="@+id/tw_skor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tw_skor"
            android:textSize="20dp"
            android:textColor="#33CC33"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
